# HeartMRI-FL

./: .gitignore  README.md  api_server.py  pyproject.toml  report.html  report_server.py  requirements.txt
notebooks/: heartmri_fl_experiment.ipynb
src/heartmri_fl/: __init__.py  __main__.py  cli.py  data.py  federated.py  model.py
tests/: test_basic.py
