[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartmri-fl"
version = "0.1.0"
description = "Heart MRI federated learning starter project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "flwr[simulation]",
    "pydicom",
    "pandas",
    "nibabel",
    "matplotlib",
]

[project.urls]
"Homepage" = "https://github.com/your-org/heartmri-fl"

[tool.setuptools.packages.find]
where = ["src"]
